# music_player

./: .gitignore  README.md  meson.build
.github/workflows/: test.yaml
data/: application.gresource.xml
data/ui/: music_player_window.ui
src/: Application.cc  Application.h  Application_Window.cc  Application_Window.h  Database_Queries.cc  Database_Queries.h  Decoder.cc  Decoder.h  GPATH  GRTAGS  GTAGS  Miner.cc  Miner.h  Model_Columns.h  Music_Player-main.cc  Player.cc  Player.h
subprojects/: taglib.wrap
subprojects/Catch2-3.1.0/: .meson-subproject-wrap-hash.txt
test/: test_miner.cc
